--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
